# Forwardx

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  esbuild.config.mjs  index.html  package.json
agent/: action_status.go  actions.go  heartbeat_state_test.go  main.go  metrics.go  metrics_test.go  mimic_network.go  mimic_test.go  panel_migration.go  panel_migration_test.go  performance_paths_test.go  plugin_tasks.go  plugin_tasks_test.go  runtime_listen_test.go  status_reporter_test.go  stress_test.go  support_bundle.go  upgrade.go  wireguard_runtime.go  wireguard_runtime_test.go
docs/: ARCHITECTURE_CN.md  PAYMENT_CN.md  index.md
drizzle/: schema.ts
forwardx-fxp/: go.mod  main.go  main_test.go  rust_interop_test.go
forwardx-fxp-rust/: Cargo.toml  README.md
forwardx-fxp-rust/src/: config.rs  crypto.rs  logging.rs  main.rs  runtime.rs  selector.rs  tcp.rs  udp.rs
scripts/: build-agent-release.sh  install-agent.sh  install-mimic.sh  install-panel-docker.sh  install-panel-local.sh  migrate-agent-legacy.sh  test-fxp-interop.mjs
server/: agentActionCommands.test.ts  agentActionCommands.ts  agentAddressState.ts  agentCrypto.test.ts  agentCrypto.ts  agentEvents.ts  agentHeartbeatGate.test.ts  agentHeartbeatGate.ts  agentHeartbeatRoute.ts  agentInstallScripts.test.ts  agentInstallScripts.ts  agentPluginInventory.test.ts  agentPluginInventory.ts  agentReportRoutes.ts  agentRouteUtils.ts  agentRoutes.ts  agentSelfTestRoutes.ts  agentStatusOrdering.test.ts  agentStatusOrdering.ts  agentStatusRoutes.ts  databasePoolSizing.ts  databaseSwitch.ts  db.ts  (+41 more)
(+88 files in other folders)
