[package]
name = "forwardx-fxp"
version = "2.2.105"
edition = "2021"
license = "AGPL-3.0-only"
description = "ForwardX encrypted forwarding runtime"

[dependencies]
anyhow = "1.0"
aes = "0.8"
aes-gcm = "0.10"
blake3 = "1.8"
ctr = "0.9"
hex = "0.4"
hmac = "0.12"
libc = "0.2"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
socket2 = { version = "0.6", features = ["all"] }
tokio = { version = "1.44", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time", "io-util"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = true
